--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,14 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Itim&family=Lato:wght@100;300;400;700;900&family=Montserrat:wght@400;700&family=Roboto:wght@300;400;700&display=swap');
+
 body {
-    font-family: 'Be Vietnam Pro', sans-serif;
-}
-
-h1, h2, h3 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-}
-
-p, button, input, a {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Itim", cursive;
 }
 
 /* Nút chat cố định */
