--- a/frontend/src/components/Detail/Detail.css
+++ b/frontend/src/components/Detail/Detail.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: #f5f5f5;
@@ -12,7 +12,7 @@ body {
   justify-content: space-between;
   color: white;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-}
+} */
 
 .logo img {
   height: 42px;
@@ -100,20 +100,18 @@ body {
 }
 
 .product-detail .row .big-picture img{
-
   width: 90%;
 }
 
-img{
-  width: 100%;
-}
 .product-detail .row .left .row{
  padding-bottom: 10px;
 }
+
 .order-product {
   display: flex;
   justify-content: center;
 }
+
 .order-product p{
   margin-top: 10px;
   width: 100%;
@@ -121,9 +119,8 @@ img{
   font-size: 30px;
   border-bottom-color: #ff5722;
   border-bottom-style:solid ;
-
-
 }
+
 .product-card:hover {
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
   border-color: #ff5722;
@@ -169,12 +166,6 @@ img{
 }
 .product-grid .row{
   margin-bottom: 10px;
-}
-body {
-  font-family: 'Roboto', sans-serif;
-  background-color: #f5f5f5;
-  margin: 0;
-  padding: 20px;
 }
 
 .product-card {
@@ -375,6 +366,7 @@ body {
   width: 100%;
   background-color: #fff;
   padding: 20px;
+  margin: 5px;
   border-radius: 12px;
   box-shadow: 0 2px 12px rgba(0, 0, 0, 0.06);
 }
@@ -400,7 +392,7 @@ body {
   border-color: #ff5722;
   cursor: pointer;
 }
-img:hover{
+.product-card img:hover {
   transform: scale(1.1);
   filter: brightness(1.1);
   border-color: #ff5722;
@@ -446,6 +438,7 @@ img:hover{
   background-color: #e25500;
   transform: translateY(-2px) scale(1.02);
 }
+
 button,
 img {
   transition: all 0.3s ease;
