--- a/frontend/src/components/Menu/Menu.css
+++ b/frontend/src/components/Menu/Menu.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #f5f5f5;
@@ -12,7 +12,7 @@ body {
     justify-content: space-between;
     color: white;
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-}
+} */
 
 .logo img {
     height: 42px;
