--- a/frontend/src/components/About/About.css
+++ b/frontend/src/components/About/About.css
@@ -39,6 +39,12 @@
 .journey{
   margin-top: 100px;
 } 
+.journey-item{
+  width: 75%;
+}
+.journey-text{
+  margin-top: 0;
+}
 .core-value{
   margin-top: 70px;
   padding-top: 70px;
@@ -81,6 +87,12 @@
   }
   .MBottom{
     margin-bottom: 30px;
+  }
+  .journey-item{
+    width: 100%;
+  }
+  .journey-text{
+    margin-top: 20px;
   }
   .core-value .core-value-1{
     margin: 40px 0px 20px 30%;
