--- a/frontend/src/components/FAQPage/FAQPage.css
+++ b/frontend/src/components/FAQPage/FAQPage.css
@@ -22,7 +22,7 @@
     text-align: center;
 }
 .search{
-    width: 60%;
+    width: 55%;
     height: 50px;
     margin-top: 1%;
     background-color: white;
@@ -52,7 +52,31 @@
 .search button:hover{
     background-color: rgb(156, 111, 20);
 }
+.dropdown{
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    border-top: none;
+    border: 1px solid gray;
+    border-radius: 20px;
+    width: 55%;
+    padding: 5px;
+    z-index: 999;
+}
+.dropdown:empty{
+    border: none
+}
+.dropdown-row{
+    cursor: pointer;
+    text-align: start;
+    font-size: 20px;
+}
+.dropdown-row:hover{
+    background-color: #efefef;
+}
 .faq{
+    display: flex;
+    width: 100%;
     flex-wrap: wrap;
     align-items: center;
     padding: 0 2% 2% 2%;
@@ -60,6 +84,8 @@
 .faq-name{
     flex: 0.5;
     width: 100%;
+    margin-top: 0;
+    margin-left: 30px;
     padding: 2% 2% 0 0;
 }
 .faq-header{
@@ -125,6 +151,7 @@
 }
 .pagination{
     --bs-pagination-font-size: 18px;
+    --bs-pagination-bg: transparent;
     --bs-pagination-color: black;
     --bs-pagination-border-width: 0;
     --bs-pagination-hover-color: white;
@@ -135,24 +162,69 @@
     --bs-pagination-focus-bg: #ffc107;
     --bs-pagination-focus-box-shadow: none;
     justify-content: center !important;
+    gap: 8px;
 }
 .page-item .page-link{
     cursor: pointer;
 }
-@media screen and(max-width:680px) {
+
+/*      CREATE QUESTION    */
+.form-label{
+    font-size: 25px;
+    color: gray;
+}
+.form-control{
+    border-radius: 0;
+}
+.form-control:focus, .form-select:focus  {
+    border-color: #ea8a0c;
+    box-shadow: 0 0 0 0.2rem rgba(232, 141, 5, 0.25);
+}
+.form-select{
+    border-radius: 0;
+}
+.btn-cancel{
+    margin: 0 0 0 1%;
+}
+
+@media (max-width:780px) {
     .search{
         width: 100%;
     }
-    .faq-name{
-        flex: 1;
+    .faq{
+        display: block;
         width: 100%;
-        padding: 2% 2% 0 0;
+        align-items: center;
+        padding: 0 2% 2% 2%;
+    }
+    .faq-name{
+        width: 100%;
+        margin-top: 0;
+        margin-left: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .faq-header{
+        font-size: 30px;
+        letter-spacing: 2;
+    }
+    .faq-image{
+        max-width: 350px;
+    }
+    .btn{
+        width: 70% !important;
+    }
+    .btn-question{
+        padding: 1% 3% 1% 3%;
     }
     .faq-title{
         font-size: 20px;
     }
     .faq-box{
         border: none;
+        margin-top: 15px;
+        padding: 0;
     }
     .br{
         display: none;
@@ -161,4 +233,20 @@
         flex: 0.5;
         padding: 2% 2% 0 0;
     }
+    .dropdown{
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        border-top: none;
+        border: 1px solid gray;
+        border-radius: 20px;
+        width: 100%;
+        padding: 5px;
+        z-index: 999;
+    }
+    .btn-cancel{
+        margin: 1% 0 0 0;
+    }
 }
+
+
