update something final

--- a/frontend/src/components/Admin/AdminHistory/AdminOrderHistory.css
+++ b/frontend/src/components/Admin/AdminHistory/AdminOrderHistory.css
@@ -63,7 +63,7 @@
   background-color: #28a745;
 }
 
-.admin-order-badge.canceled {
+.admin-order-badge.cancelled {
   background-color: #dc3545;
 }
 
